# vorcle

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
src/vorcle/: __init__.py
